syntax = "proto3";

package Dto;

message NameChangeRequest {
	int32 masterId = 1;
	string newName = 2;
}

message NameChangeResponse {
	int32 code = 1;
}