syntax = "proto3";

package AllianceProto;

message AllianceDto {
  int32 allianceId = 1;
  int32 capacity = 2;
  string name = 3;
  string notice = 4;
  repeated string rankTitles = 5;
  repeated int32 guilds = 6;
}

message GetAllianceRequest {
	int32 id = 1;
}

message GetAllianceResponse {
	AllianceDto model = 1;
}

message CreateAllianceCheckRequest {
	string name = 1;
}

message CreateAllianceCheckResponse {
	bool isValid = 1;
}

message CreateAllianceRequest {
	string name = 1;
	repeated int32 members = 2;
}